open-course-material-link-error

--- a/src/Topxia/WebBundle/Resources/views/CourseFileManage/tbody-tr.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseFileManage/tbody-tr.html.twig
@@ -1,5 +1,12 @@
 {% import "TopxiaWebBundle::macro.html.twig" as web_macro %}
 {% set quality = "" %}
+{% if course.type in ['open','liveOpen'] %}
+  {% set fileShowUrl = path('open_course_manage_file_show',{id:course.id,fileId:uploadFile.id}) %}
+  {% set convertUrl = path('open_course_manage_file_convert',{id:course.id, fileId:uploadFile.id})%}
+{% else %}
+  {% set fileShowUrl = path('course_manage_file_show',{id:course.id,fileId:uploadFile.id}) %}
+  {% set convertUrl = path('course_manage_file_convert',{id:course.id, fileId:uploadFile.id})%}
+{% endif %}
 
 <tr id="upload-file-tr-{{uploadFile.id}}" data-role="item" data-convertHash="{{uploadFile.convertHash}}">
 
@@ -10,11 +17,11 @@
       <span class="glyphicon glyphicon-cloud text-muted" title="{{'云文件'|trans}}"></span>
     {% endif %}
 
-    <a href="{{ path('course_manage_file_show', {id:course.id, fileId:uploadFile.id}) }}" target="_blank" rel="tooltip" title data-original-title="{{ uploadFile.filename }}"  >{{ uploadFile.filename|sub_text(30) }}
+    <a href="{{ fileShowUrl }}" target="_blank" rel="tooltip" title data-original-title="{{ uploadFile.filename }}"  >{{ uploadFile.filename|sub_text(30) }}
     </a>
     
     {% if setting('developer.debug') and uploadFile.storage == 'cloud' and uploadFile.type in ['video', 'ppt', 'document'] %}
-      <a href="javascript:;" data-url="{{ path('course_manage_file_convert', {id:course.id, fileId:uploadFile.id}) }}" class="convert-file-btn text-danger">{{'重新转换(调试模式)'|trans}}</a>
+      <a href="javascript:;" data-url="{{ convertUrl }}" class="convert-file-btn text-danger">{{'重新转换(调试模式)'|trans}}</a>
     {% endif %}
     <br>
 
