--- a/src/Topxia/AdminBundle/Resources/views/Default/cloud-notice.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/cloud-notice.html.twig
@@ -36,7 +36,7 @@
 {% else %}
   {% if notices|default(false) %}
     <div class="col-md-6">
-      <div class="panel panel-default">
+      <div class="panel panel-default panel-150">
         <div class="panel-heading">
           <h3 class="panel-title">{{'站长公告'|trans}}</h3>
         </div>
