--- a/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Default/index.html.twig
@@ -27,48 +27,8 @@
               <h3 class="panel-title" id="system-status-title"
                   data-url="{{ path('admin_system_status') }}">{{ '系统状态'|trans }}</h3>
             </div>
-            <div class="panel-body">
-              <ul class="subfield-list four-subfield clearfix">
-                <li>
-                  <h3>系统版本</h3>
-                  <div class="info">
-                    <span class="glyphicon glyphicon-ok-sign text-success"></span>
-                    <span class="text-lg">7.1.1</span>
-                  </div>
-                </li>
-                <li>
-                  <h3>网校应用</h3>
-                  <div class="info">
-                    <span class="glyphicon glyphicon-info-sign text-danger"></span>
-                    <a class="text-lg link-underline text-danger" href="">2个未更新</a>
-                  </div>
-                </li>
-                <li>
-                  <h3>教育云服务</h3>
-                  <div class="info">
-                    <span class="glyphicon glyphicon-info-sign text-danger"></span>
-                    <span class="status-cord-warp">
-                      <a class="text-lg link-underline text-danger" href="">
-                        2个未开启
-                      </a>
-                      <div class="cord">
-                        
-                      </div>
-                    </span>
-                    
-                  </div>
-                </li>
-                <li>
-                  <h3>移动客户端</h3>
-                  <div class="info">
-                    <span class="glyphicon glyphicon-ok-sign text-success"></span>
-                    <span class="text-lg">已开启</span>
-                  </div>
-                </li>
-              </ul>
-              {#<div id="system-status">
-                <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
-              </div>#}
+            <div class="panel-body" id="system-status">
+              <div class="empty">{{ '正在载入数据，请稍等。'|trans }}</div>
             </div>
           </div>
         </div>
