初始化的marker支持预览；弹题仅支持选择和判断

--- a/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
@@ -17,7 +17,7 @@
             <span class="title"> <i class="icon-drag glyphicon glyphicon-move"></i>
               <span class="color-primary text-xs" data-role="question-type"></span>
             </span>
-            <span class="info text-overflow" data-role="question-info"></span>
+            <span class="info text-overflow" data-toggle="modal" data-target=".modal" data-url="" data-role="question-info"></span>
           </li>
         </ul>
         <span class="time" data-role="scale-blue-time"></span>
