--- a/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/question.html.twig
@@ -42,7 +42,7 @@
 			<div class="arrow"></div>
 			<div class="popover-content clearfix">
 				<p class="title">添加随堂练习，只需一步操作</p>
-				<p class="text-md">将题目拖拽到<span class='color-warning'>「视频编辑区域」</p></p>
+				<p class="text-md">将题目拖拽到<span class='color-warning'>「视频编辑区域」</p>
 				<span class="close-introhelp js-close-introhelp">知道了</span>
 				<div class="introhelp-img js-introhelp-img">
 					<img src="{{ asset('assets/v2/img/marksintro_1.png') }}" class="">
