--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -163,7 +163,7 @@
     .more-questions {
       position: absolute;
       right: 15px;
-      bottom: 0;
+      bottom: -15px;
       left: 0;
       text-align: right;
       color: @gray;
@@ -313,7 +313,7 @@
         background-color: transparent;
         overflow: visible;
         .item-lesson  {
-          position: relative;
+          // position: relative;
           padding: 0 10px;
           margin-bottom: 0;
           text-align:  left;
