--- a/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/coord.html.twig
@@ -9,7 +9,7 @@
       <span class="line"></span>
       <div class="scale-details" >
         <ul class="lesson-list" data-role="scale-blue-list">
-          <li class="item-lesson" id="" question-id="" data-role="scale-blue-item">
+          <li class="item-lesson" id="" question-id="" data-role="scale-blue-item" data-toggle="modal" data-target=".modal">
             <span class="sqe-number"> <i class="question-remove es-icon es-icon-icon_close_circle" data-role="question-remove"></i>
               <span data-role="sqe-number">1</span>
             </span>
@@ -17,7 +17,7 @@
             <span class="title"> <i class="icon-drag glyphicon glyphicon-move"></i>
               <span class="color-primary text-xs" data-role="question-type"></span>
             </span>
-            <span class="info text-overflow" data-toggle="modal" data-target=".modal" data-url="" data-role="question-info"></span>
+            <span class="info text-overflow"  data-url="" data-role="question-info"></span>
           </li>
         </ul>
         <span class="time" data-role="scale-blue-time"></span>
