--- a/web/assets/v2/less/page/question-tr.less
+++ b/web/assets/v2/less/page/question-tr.less
@@ -21,6 +21,8 @@
 }
 
 .marker-manage {
+  position: relative;
+  min-width: 1200px;
   height: 100%;
   background-color: @gray-darker;
   overflow: hidden;
