course-comment-repost-text-fix

--- a/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Review/Widget/list.html.twig
@@ -69,7 +69,7 @@
           
           {% if canAccess %}
             <div class="thread-subpost-morebar clearfix {% if review.subPosts|default(null) is empty %}hide{% endif %}">
-              <button class="btn btn-default btn-xs pull-right js-toggle-subpost-form">{{'我也说一句'|trans}}</button>
+              <button class="btn btn-default btn-xs pull-right js-toggle-subpost-form">{{'回复'|trans}}</button>
             </div>
           {% endif %}
 
