--- a/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-error.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/EduCloud/cloud-error.html.twig
@@ -5,7 +5,7 @@
 
 {% block main %}
 <div class="text-center">
-  <h1 class="text-muted">{{'网络问题，无法连接%Edusoho%开放云平台'|trans({'%edusoho%': 'EduSoho'|copyright_less })}}</h1>
+  <h1 class="text-muted">{{'网络问题，无法连接%Edusoho%开放云平台'|trans({'%Edusoho%': 'EduSoho'|copyright_less })}}</h1>
 </div>
 
 {% endblock %}
