--- a/src/Topxia/WebBundle/Resources/views/Marker/QuestionPreview/preview-modal.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Marker/QuestionPreview/preview-modal.html.twig
@@ -3,7 +3,7 @@
 
 <div class="modal-dialog mark-questions-modal">
   <div class="modal-content">
-    {% include 'TopxiaWebBundle:Marker/QuestionPreview:do-test-' ~ type ~ '.html.twig' %}
+    {% include 'TopxiaWebBundle:Marker/QuestionPreview:' ~ type ~ '.html.twig' %}
     <script>app.load('quiz-question/preview');</script>
   </div>
 </div>
