cloud-file-sync-fix

--- a/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/cloud-file-sync.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/DeveloperSetting/cloud-file-sync.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}本地文件同步云文件 - {{ parent() }}{% endblock %}
 
+{% set menu = 'admin_setting_message' %}
+
 {% block content %}
 <div class="page-header"><h1>本地文件同步云文件</h1></div>
 
